--- a/css/map.css
+++ b/css/map.css
@@ -1,3 +1,7 @@
+ .hidden {
+     display: none;
+ }
+
  html,
  body {
      height: 100%;
@@ -204,19 +208,27 @@
      right: 0;
      z-index: 999;
      top: 1.6rem;
-     height: 30px;
+     height: 34px;
+     box-shadow: 0 2px 5px 1px #ccc;
  }
 
  #tipinput {
      width: 100%;
-     height: 30px;
+     height: 34px;
      text-indent: 1rem;
-     border: 1px solid #ccc;
+     border: none;
      border-radius: 5px;
-     font-size: 16px;
-     line-height: 30px;
+     font-size: 14px;
+     line-height: 34px;
      padding: 0 7px;
      box-sizing: border-box;
+     letter-spacing: 0.5px;
+     outline：none;
+ }
+
+ #tipinput:focus {
+     border: none;
+     outline: none;
  }
 
  #clearSearchBtn {
@@ -226,7 +238,7 @@
      margin: auto;
      width: 20px;
      height: 20px;
-     padding: 5px;
+     padding: 7px;
      text-align: center;
      vertical-align: middle;
      font-size: 14px;
@@ -351,4 +363,47 @@
 
  #fixed_mark .hidden {
      display: none;
+ }
+
+ ::-webkit-input-placeholder {
+     color: #ccd1dd;
+ }
+
+ #searchResult {
+     width: 100%;
+     position: absolute;
+     top: 36px;
+     left: 0;
+     height: 200px;
+     overflow: hidden;
+     overflow-y: scroll;
+ }
+
+ ul,
+ li {
+     list-style: none;
+ }
+
+ #searchResult ul {
+     margin: 0;
+     background: rgba(255, 255, 255, .8);
+     box-shadow: 0 2px 5px 1px #ccc;
+     padding: 0;
+ }
+
+ #searchResult ul li {
+     display: flex;
+     padding: 6px 7px 6px 20px;
+     font-size: 14px;
+     color: #333;
+ }
+
+ #searchResult ul li .name {
+     flex: 8;
+     text-align: left;
+ }
+
+ #searchResult ul li .distan {
+     flex: 2;
+     text-align: right;
  }
