--- a/css/map.css
+++ b/css/map.css
@@ -274,19 +274,19 @@
 
  @-webkit-keyframes spin {
      0% {
-          -webkit-transform: rotate(0deg);
+         -webkit-transform: rotate(0deg);
      }
      100% {
-          -webkit-transform: rotate(360deg);
+         -webkit-transform: rotate(360deg);
      }
  }
 
  @keyframes spin {
      0% {
-          transform: rotate(0deg);
+         transform: rotate(0deg);
      }
      100% {
-          transform: rotate(360deg);
+         transform: rotate(360deg);
      }
  }
 
@@ -406,4 +406,27 @@
  #searchResult ul li .distan {
      flex: 2;
      text-align: right;
+ }
+
+ .amap-marker-content .mark {
+     width: 50px;
+     padding: 4px;
+     font-size: 12px;
+     position: relative;
+     background: rgba(0, 0, 0, .7);
+     color: #fff;
+     text-align: center;
+ }
+
+ .amap-marker-content .mark:after {
+     content: '';
+     display: block;
+     width: 4px;
+     height: 4px;
+     transform: rotate(45deg);
+     position: absolute;
+     left: 50%;
+     margin-left: -2px;
+     bottom: -2px;
+     background: rgba(0, 0, 0, .7);
  }
