--- a/css/map.css
+++ b/css/map.css
@@ -223,7 +223,7 @@
      padding: 0 7px;
      box-sizing: border-box;
      letter-spacing: 0.5px;
-     outlineï¼šnone;
+     outline£ºnone;
  }
 
  #tipinput:focus {
