--- a/css/power.ball.css
+++ b/css/power.ball.css
@@ -43,14 +43,17 @@ body,
 }
 
 #code>div {
-	flex: 1;
+	// flex: 1;
+	width: 50%;
 	padding: 10px;
+	margin: auto;
 }
 
 #code>div .code_title {
 	color: #fff;
 	padding: 0 0 10px;
 	font-size: 16px;
+	display: none;
 }
 
 #code>div img {
